# pystack3d

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  conftest.py  doc_requirements.txt  pyproject.toml  setup.py
.github/workflows/: draft-pdf.yml  gen-doc.yml  pypi-publish.yml  pytest.yml
assets/stacks/stack_1/: Atlas3D.a3d-setup
assets/toml/: params.toml  params_real_perf_stack.toml  params_real_stack.toml  params_synthetic_stack.toml
doc/: Makefile  bkg_removal.rst  citing.rst  conf.py  credits.rst  cropping.rst  cropping_final.rst  destriping.rst  dev_notes.rst  gen_figures.py  general.rst  getting_started.rst  gh-pages.py  index.rst  intensity_rescaling.rst  intro.rst  params.rst  registration.rst  resampling.rst
examples/: ex_pystack3d_synth.py  ex_real_stack.py  ex_real_stack_perf.py  ex_synthetic_stack.py  test_pystack3d_synth.py  utils.py
paper/: paper.bib  paper.md
pystack3d/: __init__.py  bkg_removal.py  cropping.py  destriping.py  intensity_rescaling.py  intensity_rescaling_area.py  registration_calculation.py  registration_transformation.py  resampling.py  stack3d.py  utils.py  utils_metadata_fibics.py  utils_mp.py  utils_multiprocessing.py
pystack3d/examples/: ex_pystack3d_real.py  ex_pystack3d_synth.py  params_real.toml  params_synth.toml
tests/: test_synthetic_stack.py
